--- a/foodiedelight/src/Style/style.css
+++ b/foodiedelight/src/Style/style.css
@@ -37,4 +37,12 @@
     grid-template-columns: repeat(5, 1fr);
     gap: 16px;
     padding: 16px;
+    cursor: pointer;
 }
+
+.button-box {
+    display: flex;
+    justify-content: flex-end;  
+    gap: 16px;
+}
+
