--- a/foodiedelight/src/Style/style.css
+++ b/foodiedelight/src/Style/style.css
@@ -24,15 +24,18 @@
 }
 
 .restro-card-parent {
-    margin-top: 50px;
-    border: 1px solid red;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     border-radius: 10px;
     padding: 10px;
-    width: max-content;
-    height: max-content;
+    width: 100%;
+    height: 200px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .all-restro-box {
+    margin-top: 30px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 16px;
@@ -44,5 +47,69 @@
     display: flex;
     justify-content: flex-end;  
     gap: 16px;
+}
+
+.contact-info{
+    /* margin-top: "60px"; */
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+    /* border: 1px solid black; */
+    position: absolute;
+    bottom: -10px;
+}
+
+@media only screen and (max-width: 1200px) {
+    .contact-info{
+        width: 100%;
+        height: auto;
+        position: relative;
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 768px) {
+    .all-restro-box {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+    
+    .restro-card-parent {
+        width: 100%;
+        height: auto;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+    .contact-info{
+        width: 100%;
+        height: auto;
+        position: relative;
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 480px) {
+    .form {
+        padding: 10px;
+    }
+
+    .Navbar {
+        flex-direction: column;
+        gap: 10px;
+    }
+    
+    .restro-card-parent {
+        padding: 8px;
+    }
+
+    .all-restro-box {
+        grid-template-columns: 1fr;
+    }
+
+    .contact-info{
+        position: relative;
+        flex-wrap: wrap;
+        height: auto;
+    }
 }
 
